<resources>
    <string name="app_name">ndaM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Desarrollo de Software III</string>
    <string name="nav_header_subtitle">DeCo</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ubicanos">Ubicanos</string>
    <string name="galeria">Galeria</string>
    <string name="nosotros">Nosotros</string>
    <string name="SUMA">Suma</string>
</resources>