<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ndam.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.ndam.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.ndam.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.ndam.Fragment1"
        android:label="fragment_1"
        tools:layout="@layout/fragment_1" />
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.ndam.Fragment2"
        android:label="fragment_2"
        tools:layout="@layout/fragment_2" />
    <fragment
        android:id="@+id/fragment3"
        android:name="com.example.ndam.Fragment3"
        android:label="fragment_3"
        tools:layout="@layout/fragment_3" />
    <fragment
        android:id="@+id/operacionesFragment"
        android:name="com.example.ndam.operacionesFragment"
        android:label="fragment_operaciones"
        tools:layout="@layout/fragment_operaciones" />
</navigation>